Starting creating function to detect connected cubes

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Boring but neccesary inputs\n",
     "import numpy as np\n",
-    "from itertools import combinations "
+    "from itertools import combinations \n",
+    "import networkx as nx"
    ]
   },
   {
@@ -89,6 +90,57 @@
     "    cube_list = cubes_with_n_edges(n_edges)\n",
     "    cubes_info[n_edges]['full list'] = cube_list\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_to_graph(cube_matrix):\n",
+    "    edge_vertex = { 1: ( 1, 2),\n",
+    "                    2: ( 2, 3),\n",
+    "                    3: ( 3, 4),\n",
+    "                    4: ( 4, 1),\n",
+    "                    5: ( 1, 5),\n",
+    "                    6: ( 2, 6),\n",
+    "                    7: ( 3, 7),\n",
+    "                    8: ( 4, 8),\n",
+    "                    9: ( 5, 6),\n",
+    "                   10: ( 6, 7),\n",
+    "                   11: ( 7, 8),\n",
+    "                   12: ( 5, 8),      \n",
+    "                    }\n",
+    "    cube_graph  =  nx.Graph()\n",
+    "    cube_graph.add_nodes_from(list(range(1,13)))\n",
+    "    cube_vector = cube_matrix.reshape(12)\n",
+    "    \n",
+    "    edges_to_add = []\n",
+    "    for item in range(12):\n",
+    "        if cube_vector[item]==1:\n",
+    "            edges_to_add.append(edge_vertex[item+1])\n",
+    "    cube_graph.add_edges_from(edges_to_add)\n",
+    "            \n",
+    "    return cube_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Loop over the graphs and eliminate not connected ones\n",
+    "\n",
+    "nx.is_connected(G)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
