Testing the graph generating function

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1 1]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_cube=create_cube([2,3])\n",
+    "print(test_cube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: \n",
+      "Type: Graph\n",
+      "Number of nodes: 12\n",
+      "Number of edges: 2\n",
+      "Average degree:   0.3333\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "[(1, 4), (3, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_cube_graph = matrix_to_graph(test_cube)\n",
+    "print(nx.info(test_cube_graph))\n",
+    "print(test_cube_graph.nodes)\n",
+    "print(test_cube_graph.edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -136,11 +182,6 @@
     "nx.is_connected(G)\n",
     "'''"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -182,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
