Debugging, also everything with be zero-based numbering

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -32,7 +32,7 @@
     "    3x4 matrix with 1's (edges) on those indexes\n",
     "\n",
     "    input:\n",
-    "            edge_list: List of indexes where an edge exists\n",
+    "            edge_list: List of indexes where an edge exists (edges labelled from 1 to 12)\n",
     "    output:\n",
     "            cube: 3x4 matrix representing the cube with edges specified in edge_list\n",
     "            \n",
@@ -112,7 +112,7 @@
     "                   12: ( 5, 8),      \n",
     "                    }\n",
     "    cube_graph  =  nx.Graph()\n",
-    "    cube_graph.add_nodes_from(list(range(1,13)))\n",
+    "    cube_graph.add_nodes_from(list(range(1,9)))\n",
     "    cube_vector = cube_matrix.reshape(12)\n",
     "    \n",
     "    edges_to_add = []\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,26 +155,37 @@
      "text": [
       "Name: \n",
       "Type: Graph\n",
-      "Number of nodes: 12\n",
+      "Number of nodes: 8\n",
       "Number of edges: 2\n",
-      "Average degree:   0.3333\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
-      "[(1, 4), (3, 4)]\n"
+      "Average degree:   0.5000\n",
+      "nodes:  [1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "edges:  [(1, 4), (3, 4)]\n"
      ]
     }
    ],
    "source": [
     "test_cube_graph = matrix_to_graph(test_cube)\n",
     "print(nx.info(test_cube_graph))\n",
-    "print(test_cube_graph.nodes)\n",
-    "print(test_cube_graph.edges)"
+    "print('nodes: ', test_cube_graph.nodes)\n",
+    "print('edges: ', test_cube_graph.edges)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nLoop over the graphs and eliminate not connected ones\\n\\nnx.is_connected(G)\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Loop over the graphs and eliminate not connected ones\n",
@@ -185,9 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nSo this works with a lot of duplication\\n\\nTo do list:\\n\\n* Function to generate all rigid transformations\\n\\n* Function to transfor cube into graph to check for connectedness\\n\\n* Function to to check if structure is 3D\\n\\n* Optional Function to generate an actual picture of the cube possibly using povray\\n\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "\n",
