Added and tested connectedness function

--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -72,6 +72,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrix_to_graph(cube_matrix):\n",
+    "    edge_vertex = { 0: ( 0, 1),\n",
+    "                    1: ( 1, 2),\n",
+    "                    2: ( 2, 3),\n",
+    "                    3: ( 3, 0),\n",
+    "                    4: ( 0, 4),\n",
+    "                    5: ( 1, 5),\n",
+    "                    6: ( 2, 6),\n",
+    "                    7: ( 3, 7),\n",
+    "                    8: ( 4, 5),\n",
+    "                    9: ( 5, 6),\n",
+    "                   10: ( 6, 7),\n",
+    "                   11: ( 4, 7),      \n",
+    "                    }\n",
+    "    cube_graph  =  nx.Graph()\n",
+    "\n",
+    "    cube_vector = cube_matrix.reshape(12)\n",
+    "    \n",
+    "    edges_to_add = []\n",
+    "    nodes_to_add = []\n",
+    "    for item in range(12):\n",
+    "        if cube_vector[item]==1:\n",
+    "            edges_to_add.append(edge_vertex[item])\n",
+    "            nodes_to_add.append(edge_vertex[item][0])\n",
+    "            nodes_to_add.append(edge_vertex[item][1])\n",
+    "    \n",
+    "    nodes_to_add = list(set(nodes_to_add))\n",
+    "    cube_graph.add_nodes_from(nodes_to_add)\n",
+    "    cube_graph.add_edges_from(edges_to_add)\n",
+    "            \n",
+    "    return cube_graph"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,132 +119,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "cubes_info = {}\n",
-    "for n_edges in range(13):\n",
+    "for n_edges in range(3,12):\n",
     "    cubes_info[n_edges]={}\n",
-    "    cube_list = cubes_with_n_edges(n_edges)\n",
-    "    cubes_info[n_edges]['full list'] = cube_list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def matrix_to_graph(cube_matrix):\n",
-    "    edge_vertex = { 1: ( 1, 2),\n",
-    "                    2: ( 2, 3),\n",
-    "                    3: ( 3, 4),\n",
-    "                    4: ( 4, 1),\n",
-    "                    5: ( 1, 5),\n",
-    "                    6: ( 2, 6),\n",
-    "                    7: ( 3, 7),\n",
-    "                    8: ( 4, 8),\n",
-    "                    9: ( 5, 6),\n",
-    "                   10: ( 6, 7),\n",
-    "                   11: ( 7, 8),\n",
-    "                   12: ( 5, 8),      \n",
-    "                    }\n",
-    "    cube_graph  =  nx.Graph()\n",
-    "    cube_graph.add_nodes_from(list(range(1,9)))\n",
-    "    cube_vector = cube_matrix.reshape(12)\n",
     "    \n",
-    "    edges_to_add = []\n",
-    "    for item in range(12):\n",
-    "        if cube_vector[item]==1:\n",
-    "            edges_to_add.append(edge_vertex[item+1])\n",
-    "    cube_graph.add_edges_from(edges_to_add)\n",
-    "            \n",
-    "    return cube_graph"
+    "    cube_list = cubes_with_n_edges(n_edges)\n",
+    "    cubes_info[n_edges]['full list'] = cube_list\n",
+    "    \n",
+    "    cube_list_connected = [ item for item in cube_list if nx.is_connected(matrix_to_graph(item)) ]\n",
+    "    cubes_info[n_edges]['connected list'] = cube_list_connected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 1 1]\n",
-      " [0 0 0 0]\n",
-      " [0 0 0 0]]\n"
+      "Edges:  3\n",
+      "Total cubes:  220\n",
+      "Connected cubes:  56\n",
+      "\n",
+      "Edges:  4\n",
+      "Total cubes:  495\n",
+      "Connected cubes:  126\n",
+      "\n",
+      "Edges:  5\n",
+      "Total cubes:  792\n",
+      "Connected cubes:  276\n",
+      "\n",
+      "Edges:  6\n",
+      "Total cubes:  924\n",
+      "Connected cubes:  500\n",
+      "\n",
+      "Edges:  7\n",
+      "Total cubes:  792\n",
+      "Connected cubes:  660\n",
+      "\n",
+      "Edges:  8\n",
+      "Total cubes:  495\n",
+      "Connected cubes:  480\n",
+      "\n",
+      "Edges:  9\n",
+      "Total cubes:  220\n",
+      "Connected cubes:  220\n",
+      "\n",
+      "Edges:  10\n",
+      "Total cubes:  66\n",
+      "Connected cubes:  66\n",
+      "\n",
+      "Edges:  11\n",
+      "Total cubes:  12\n",
+      "Connected cubes:  12\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "test_cube=create_cube([2,3])\n",
-    "print(test_cube)"
+    "for n_edges in cubes_info:\n",
+    "    print ('Edges: ', n_edges)\n",
+    "    n_cubes = len(cubes_info[n_edges]['full list'])\n",
+    "    print('Total cubes: ',n_cubes)\n",
+    "    n_cubes_connected = len(cubes_info[n_edges]['connected list'])\n",
+    "    print('Connected cubes: ',n_cubes_connected)\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: \n",
-      "Type: Graph\n",
-      "Number of nodes: 8\n",
-      "Number of edges: 2\n",
-      "Average degree:   0.5000\n",
-      "nodes:  [1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "edges:  [(1, 4), (3, 4)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_cube_graph = matrix_to_graph(test_cube)\n",
-    "print(nx.info(test_cube_graph))\n",
-    "print('nodes: ', test_cube_graph.nodes)\n",
-    "print('edges: ', test_cube_graph.edges)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nLoop over the graphs and eliminate not connected ones\\n\\nnx.is_connected(G)\\n'"
+       "'\\n\\nSo this works with a lot of duplication\\n\\nTo do list:\\n\\n* Function to generate all rigid transformations\\n\\n* Function to to check if structure is 3D\\n\\n* Optional Function to generate an actual picture of the cube possibly using povray\\n\\n'"
       ]
      },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Loop over the graphs and eliminate not connected ones\n",
-    "\n",
-    "nx.is_connected(G)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\nSo this works with a lot of duplication\\n\\nTo do list:\\n\\n* Function to generate all rigid transformations\\n\\n* Function to transfor cube into graph to check for connectedness\\n\\n* Function to to check if structure is 3D\\n\\n* Optional Function to generate an actual picture of the cube possibly using povray\\n\\n'"
-      ]
-     },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,14 +217,19 @@
     "\n",
     "* Function to generate all rigid transformations\n",
     "\n",
-    "* Function to transfor cube into graph to check for connectedness\n",
-    "\n",
-    "* Function to to check if structure is 3D\n",
+    "* Function to to check if structure is 3D (not sure what's an elegant way to do this)\n",
     "\n",
     "* Optional Function to generate an actual picture of the cube possibly using povray\n",
     "\n",
     "'''\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
