--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -147,49 +147,60 @@
       "Total cubes:  220\n",
       "Connected cubes:  56\n",
       "\n",
+      "Total connected:  56\n",
       "Edges:  4\n",
       "Total cubes:  495\n",
       "Connected cubes:  126\n",
       "\n",
+      "Total connected:  182\n",
       "Edges:  5\n",
       "Total cubes:  792\n",
       "Connected cubes:  276\n",
       "\n",
+      "Total connected:  458\n",
       "Edges:  6\n",
       "Total cubes:  924\n",
       "Connected cubes:  500\n",
       "\n",
+      "Total connected:  958\n",
       "Edges:  7\n",
       "Total cubes:  792\n",
       "Connected cubes:  660\n",
       "\n",
+      "Total connected:  1618\n",
       "Edges:  8\n",
       "Total cubes:  495\n",
       "Connected cubes:  480\n",
       "\n",
+      "Total connected:  2098\n",
       "Edges:  9\n",
       "Total cubes:  220\n",
       "Connected cubes:  220\n",
       "\n",
+      "Total connected:  2318\n",
       "Edges:  10\n",
       "Total cubes:  66\n",
       "Connected cubes:  66\n",
       "\n",
+      "Total connected:  2384\n",
       "Edges:  11\n",
       "Total cubes:  12\n",
       "Connected cubes:  12\n",
-      "\n"
+      "\n",
+      "Total connected:  2396\n"
      ]
     }
    ],
    "source": [
+    "total_connected = 0\n",
     "for n_edges in cubes_info:\n",
     "    print ('Edges: ', n_edges)\n",
     "    n_cubes = len(cubes_info[n_edges]['full list'])\n",
     "    print('Total cubes: ',n_cubes)\n",
     "    n_cubes_connected = len(cubes_info[n_edges]['connected list'])\n",
+    "    total_connected += n_cubes_connected\n",
     "    print('Connected cubes: ',n_cubes_connected)\n",
-    "    print()"
+    "    print('\\nTotal connected: ', total_connected)"
    ]
   },
   {
