cubes generated with povray

--- a/vapory tests.ipynb
+++ b/vapory tests.ipynb
@@ -6,27 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vapory import *\n",
-    "\n",
-    "vertex = {0:[-1,-1, 1],\n",
-    "          1:[-1, 1, 1],\n",
-    "          2:[ 1, 1, 1],\n",
-    "          3:[ 1,-1, 1],\n",
-    "          4:[-1,-1,-1],\n",
-    "          5:[-1, 1,-1],\n",
-    "          6:[ 1, 1,-1],\n",
-    "          7:[ 1,-1,-1]}"
+    "from vapory import * "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def create_povray_edge(v1,v2):\n",
-    "    edge = Cylinder(v1, v2, 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    return edge"
+    "# Physical location of the vertices"
    ]
   },
   {
@@ -35,29 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_povray_cube():\n",
-    "\n",
-    "    \n",
-    "    edge_0 = Cylinder(vertex[0], vertex[1], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_1 = Cylinder(vertex[1], vertex[2], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_2 = Cylinder(vertex[2], vertex[3], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_3 = Cylinder(vertex[3], vertex[0], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    \n",
-    "    edge_4 = Cylinder(vertex[0], vertex[4], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_5 = Cylinder(vertex[1], vertex[5], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_6 = Cylinder(vertex[2], vertex[6], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_7 = Cylinder(vertex[3], vertex[7], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    \n",
-    "    edge_8 = Cylinder(vertex[4], vertex[5], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_9 = Cylinder(vertex[5], vertex[6], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_10 = Cylinder(vertex[6], vertex[7], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    edge_11 = Cylinder(vertex[7], vertex[4], 0.1, Texture( Pigment( 'color', [1, 0, 1] )) )\n",
-    "    \n",
-    "    cube = [edge_0, edge_1, edge_2, edge_3,\n",
-    "            edge_4, edge_5, edge_6, edge_7, \n",
-    "            edge_8, edge_9, edge_10, edge_11]\n",
-    "    \n",
-    "    return cube"
+    "# Origin at the center of a cube of side 2\n",
+    "vertex = {0:[-1,-1, 1], 1:[-1, 1, 1], 2:[ 1, 1, 1], 3:[ 1,-1, 1],\n",
+    "          4:[-1,-1,-1], 5:[-1, 1,-1], 6:[ 1, 1,-1], 7:[ 1,-1,-1]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Helper functions"
    ]
   },
   {
@@ -66,9 +40,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera = Camera( 'location', [4, 4, 4], 'look_at', [0, 0, 0] )\n",
-    "light_1 = LightSource( [2, 4, 3], 'color', [1, 1, 1] )\n",
-    "light_2 = LightSource( [1, 1, 4], 'color', [1, 1, 1] )"
+    "def create_povray_edge(v1,v2):\n",
+    "    '''\n",
+    "    Creates a povray edge\n",
+    "    '''\n",
+    "    edge = Cylinder(v1, v2, 0.075, Texture( Pigment( 'color', [1/2, 1/2, 1/2] )) )\n",
+    "    \n",
+    "    return edge"
    ]
   },
   {
@@ -77,10 +55,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cube = create_povray_cube()\n",
-    "objects = [light_1, light_2]\n",
-    "for item in cube:\n",
-    "    objects.append(item)"
+    "def create_povray_cube(edges):\n",
+    "    '''\n",
+    "    Creates a povray cube structure given the edges\n",
+    "    '''\n",
+    "    cube = []\n",
+    "    for edge in edges:\n",
+    "    \n",
+    "        vi = vertex[edge[0]]\n",
+    "        vf = vertex[edge[1]]\n",
+    "        cube.append(create_povray_edge(vi,vf))\n",
+    "    \n",
+    "    return cube"
    ]
   },
   {
@@ -89,9 +75,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sphere = Sphere( [0, 1, 2], 2, Texture( Pigment( 'color', [1, 0, 1] )))\n",
+    "def create_povray_ref_frame():\n",
+    "    \n",
+    "    x_axis = Cylinder([0, 0, 0], [3/4,   0,   0], 0.03, Texture( Pigment( 'color', [1, 0, 0] )) )\n",
+    "    y_axis = Cylinder([0, 0, 0], [  0, 3/4,   0], 0.03, Texture( Pigment( 'color', [0, 1, 0] )) )\n",
+    "    z_axis = Cylinder([0, 0, 0], [  0,   0, 3/4], 0.03, Texture( Pigment( 'color', [0, 0, 1] )) )\n",
+    "    \n",
+    "    return [x_axis, y_axis, z_axis]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define camera and light sources "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This could be much more sophisticated\n",
+    "camera = Camera( 'location', [4, 5, 6], 'look_at', [0, 0, 0] )\n",
+    "light_1 = LightSource( [2, 4, 3], 'color', [1, 1, 1] )\n",
+    "light_2 = LightSource( [1, 1, 4], 'color', [1, 1, 1] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a reference frame for . . . reference (x,y,z) = (R, G ,B) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that for some weird reason POVRAY does not follow the right hand rule\n",
+    "ref_frame = create_povray_ref_frame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a cube "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges = [(0,1), (1,2), (2,3), (3,0), (0,4), (1, 5), (2,6), (3,7), (4,5), (5,6), (6,7), (7,4) ]\n",
+    "cube  = create_povray_cube(edges)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Put the scene together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objects = [light_1, light_2]\n",
     "\n",
-    "scene = Scene( camera, objects = objects )\n",
+    "for axis in ref_frame:\n",
+    "    objects.append(axis)\n",
+    "for item in cube:\n",
+    "    objects.append(item)\n",
+    "    \n",
+    "scene = Scene( camera, objects = objects )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Render the scene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scene.render(\"cube.png\", width=1200, height=900)"
    ]
   }
