--- a/vapory tests.ipynb
+++ b/vapory tests.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:16.024711Z",
+     "start_time": "2020-08-18T14:58:15.886305Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from vapory import * "
@@ -19,7 +24,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:21.008266Z",
+     "start_time": "2020-08-18T14:58:21.002695Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Origin at the center of a cube of side 2\n",
@@ -37,7 +47,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:28.643295Z",
+     "start_time": "2020-08-18T14:58:28.640307Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_povray_edge(v1,v2):\n",
@@ -52,7 +67,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:29.698780Z",
+     "start_time": "2020-08-18T14:58:29.689030Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_povray_cube(edges):\n",
@@ -61,18 +81,23 @@
     "    '''\n",
     "    cube = []\n",
     "    for edge in edges:\n",
-    "    \n",
+    "\n",
     "        vi = vertex[edge[0]]\n",
     "        vf = vertex[edge[1]]\n",
-    "        cube.append(create_povray_edge(vi,vf))\n",
-    "    \n",
+    "        cube.append(create_povray_edge(vi, vf))\n",
+    "\n",
     "    return cube"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:30.800974Z",
+     "start_time": "2020-08-18T14:58:30.795176Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def create_povray_ref_frame():\n",
@@ -94,13 +119,18 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:41.089376Z",
+     "start_time": "2020-08-18T14:58:41.086253Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# This could be much more sophisticated\n",
-    "camera = Camera( 'location', [4, 5, 6], 'look_at', [0, 0, 0] )\n",
-    "light_1 = LightSource( [2, 4, 3], 'color', [1, 1, 1] )\n",
-    "light_2 = LightSource( [1, 1, 4], 'color', [1, 1, 1] )"
+    "camera = Camera('location', [4, 5, 6], 'look_at', [0, 0, 0])\n",
+    "light_1 = LightSource([2, 4, 3], 'color', [1, 1, 1])\n",
+    "light_2 = LightSource([1, 1, 4], 'color', [1, 1, 1])"
    ]
   },
   {
@@ -113,7 +143,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:43.607667Z",
+     "start_time": "2020-08-18T14:58:43.597673Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Note that for some weird reason POVRAY does not follow the right hand rule\n",
@@ -130,7 +165,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:48.818595Z",
+     "start_time": "2020-08-18T14:58:48.815446Z"
+    }
+   },
    "outputs": [],
    "source": [
     "edges = [(0,1), (1,2), (2,3), (3,0), (0,4), (1, 5), (2,6), (3,7), (4,5), (5,6), (6,7), (7,4) ]\n",
@@ -147,7 +187,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:58:50.888351Z",
+     "start_time": "2020-08-18T14:58:50.880389Z"
+    }
+   },
    "outputs": [],
    "source": [
     "objects = [light_1, light_2]\n",
@@ -156,8 +201,8 @@
     "    objects.append(axis)\n",
     "for item in cube:\n",
     "    objects.append(item)\n",
-    "    \n",
-    "scene = Scene( camera, objects = objects )"
+    "\n",
+    "scene = Scene(camera, objects=objects)"
    ]
   },
   {
@@ -170,11 +215,23 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T14:59:00.740754Z",
+     "start_time": "2020-08-18T14:58:59.620275Z"
+    }
+   },
    "outputs": [],
    "source": [
     "scene.render(\"cube.png\", width=1200, height=900)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
