--- a/Sol Lewitt 122.ipynb
+++ b/Sol Lewitt 122.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions definitions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -37,10 +44,10 @@
     "            cube: 3x4 matrix representing the cube with edges specified in edge_list\n",
     "            \n",
     "    '''\n",
-    "    cube = np.zeros(12,dtype=int)\n",
+    "    cube = np.zeros(12, dtype=int)\n",
     "    for index in edge_list:\n",
     "        cube[index] = 1\n",
-    "    cube = cube.reshape((3,4))\n",
+    "    cube = cube.reshape((3, 4))\n",
     "\n",
     "    return cube"
    ]
@@ -62,12 +69,12 @@
     "    output:\n",
     "            cube_list: List of all possible cubes with n_edges\n",
     "    '''\n",
-    "    \n",
+    "\n",
     "    comb = combinations(list(range(12)), n_edges)\n",
     "    cube_list = []\n",
     "    for item in comb:\n",
     "        cube_list.append(create_cube(item))\n",
-    "        \n",
+    "\n",
     "    return cube_list"
    ]
   },
@@ -78,35 +85,36 @@
    "outputs": [],
    "source": [
     "def matrix_to_graph(cube_matrix):\n",
-    "    edge_vertex = { 0: ( 0, 1),\n",
-    "                    1: ( 1, 2),\n",
-    "                    2: ( 2, 3),\n",
-    "                    3: ( 3, 0),\n",
-    "                    4: ( 0, 4),\n",
-    "                    5: ( 1, 5),\n",
-    "                    6: ( 2, 6),\n",
-    "                    7: ( 3, 7),\n",
-    "                    8: ( 4, 5),\n",
-    "                    9: ( 5, 6),\n",
-    "                   10: ( 6, 7),\n",
-    "                   11: ( 4, 7),      \n",
-    "                    }\n",
-    "    cube_graph  =  nx.Graph()\n",
+    "    edge_vertex = {\n",
+    "        0: (0, 1),\n",
+    "        1: (1, 2),\n",
+    "        2: (2, 3),\n",
+    "        3: (3, 0),\n",
+    "        4: (0, 4),\n",
+    "        5: (1, 5),\n",
+    "        6: (2, 6),\n",
+    "        7: (3, 7),\n",
+    "        8: (4, 5),\n",
+    "        9: (5, 6),\n",
+    "        10: (6, 7),\n",
+    "        11: (4, 7),\n",
+    "    }\n",
+    "    cube_graph = nx.Graph()\n",
     "\n",
     "    cube_vector = cube_matrix.reshape(12)\n",
-    "    \n",
+    "\n",
     "    edges_to_add = []\n",
     "    nodes_to_add = []\n",
     "    for item in range(12):\n",
-    "        if cube_vector[item]==1:\n",
+    "        if cube_vector[item] == 1:\n",
     "            edges_to_add.append(edge_vertex[item])\n",
     "            nodes_to_add.append(edge_vertex[item][0])\n",
     "            nodes_to_add.append(edge_vertex[item][1])\n",
-    "    \n",
+    "\n",
     "    nodes_to_add = list(set(nodes_to_add))\n",
     "    cube_graph.add_nodes_from(nodes_to_add)\n",
     "    cube_graph.add_edges_from(edges_to_add)\n",
-    "            \n",
+    "\n",
     "    return cube_graph"
    ]
   },
@@ -194,12 +202,12 @@
    "source": [
     "total_connected = 0\n",
     "for n_edges in cubes_info:\n",
-    "    print ('Edges: ', n_edges)\n",
+    "    print('Edges: ', n_edges)\n",
     "    n_cubes = len(cubes_info[n_edges]['full list'])\n",
-    "    print('Total cubes: ',n_cubes)\n",
+    "    print('Total cubes: ', n_cubes)\n",
     "    n_cubes_connected = len(cubes_info[n_edges]['connected list'])\n",
     "    total_connected += n_cubes_connected\n",
-    "    print('Connected cubes: ',n_cubes_connected)\n",
+    "    print('Connected cubes: ', n_cubes_connected)\n",
     "    print('\\nTotal connected: ', total_connected)"
    ]
   },
@@ -260,6 +268,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "325px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
